[package]
name = "async-acme"
version = "0.6.0"
authors = ["User65k <15049544+User65k@users.noreply.github.com>"]
edition = "2021"

repository = "https://github.com/User65k/async-acme"
description = "async ACME client for tls-alpn-01 challenge"
license = "MIT"
keywords = ["letsencrypt", "acme", "async", "alpn", "tls"]
readme = "README.md"

[dependencies]
generic-async-http-client = "0.6"
base64 =  "0.22"
thiserror = "2.0"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

futures-util = { version = "0.3", default-features = false }
async-trait = "0.1"

rustls = { version = "0.23", default-features = false, optional = true}
ring = {version = "0.17",    default-features = false, optional = true, features = ["std"]} #used by rustls
aws-lc-rs = {version = "1.12.1", optional = true}
rcgen = { version = "0.13",  default-features = false, optional = true} #uses ring
rustls-pemfile = { version = "2.2", optional = true}

openssl = { version = "0.10", optional = true }
native-tls = { version = "0.2", optional = true }
#picky # custom cert gen
#easy_ssl # openssl cert gen
#p12 = "0.2.0"

x509-parser = { version = "0.16", default-features = false}

async-std = {version="1.13.0",optional=true}
tokio = {version = "1", optional=true}

[features]
rustls_ring = [
    "generic-async-http-client/rustls",
    "rcgen/pem",
    "rustls-pemfile",
    "rustls/ring",
    "dep:ring",
    "rcgen/ring"]
rustls_aws_lc_rs = [
    "generic-async-http-client/rustls_aws_lc_rs",
    "rcgen/pem",
    "rustls-pemfile",
    "rustls/aws_lc_rs",
    "dep:aws-lc-rs",
    "rcgen/aws_lc_rs"]
use_async_std = ["async-std", "generic-async-http-client/use_async_h1"]
use_tokio = ["tokio/fs", "tokio/time", "generic-async-http-client/use_hyper"]

use_openssl = ["openssl","native-tls"]

default = []

[dev-dependencies]
async-stream = "0.3.0"
tokio = { version = "1.0", features = ["io-std", "macros", "net", "rt-multi-thread"] }
hyper = { version = "1.2", features = ["full"] }
hyper-util = {version = "0.1.3", features = ["http1", "http2", "server", "tokio"]}
futures-util = { version = "0.3.1", default-features = false }
tokio-rustls = {version = "0.26", default-features = false}
pretty_env_logger = { version = "0.5.0", default-features = false }
futures-rustls = {version = "0.26", default-features = false}

[[example]]
name = "hyper_rustls"
path = "examples/hyper_rustls.rs"
required-features = ["use_tokio", "rustls_ring"]

[[example]]
name = "async_rustls"
path = "examples/async_rustls.rs"
required-features = ["use_async_std", "rustls_ring"]


[package.metadata.docs.rs]
features = ["rustls_ring"]
rustdoc-args = ["--cfg", "docsrs"]
